welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: not found: value estSurOrange
	} while (estSurOrange)
                 ^